--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -8,7 +8,11 @@ RUN go get -u github.com/jstemmer/go-junit-report && \
     chmod +x /go/src/github.com/chadgrant/go-tests.sh
 
 WORKDIR /go/src/github.com/chadgrant/$application
-COPY . /go/src/github.com/chadgrant/$application
+
+COPY main.go /go/src/github.com/chadgrant/$application
+COPY store /go/src/github.com/chadgrant/$application/store/
+COPY data /go/src/github.com/chadgrant/$application/data/
+
 RUN go get ./...
 
 ENTRYPOINT "../go-tests.sh"
