--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,20 +20,22 @@ services:
        - 5000:8080
 
    tests:
-     build:
+      build:
        context: ./
        dockerfile: Dockerfile.tests
        args:
          - application=dynamodb-go-sample
-     image: chadgrant/sample_test:${BUILD_NUMBER:-1.0.0}
-     container_name: sample_test
-     depends_on:
+      image: chadgrant/sample_test:${BUILD_NUMBER:-1.0.0}
+      container_name: sample_test
+      depends_on:
         - data
         - api
+      environment:
+        DYNAMO_ENDPOINT: "http://data:8000"
 
    data:
       container_name: sample_api_data
-      image: amazon/dynamodb-local:1.1
+      image: amazon/dynamodb-local
       restart: unless-stopped
       ports:
          - 8000:8000
