--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,15 +21,13 @@ services:
      environment:
         DYNAMO_ENDPOINT: "http://data:8000"       
         AWS_REGION: "us-east-1"
-        AWS_ACCESS_KEY_ID: 123
-        AWS_SECRET_ACCESS_KEY: 123
+        AWS_ACCESS_KEY_ID: key
+        AWS_SECRET_ACCESS_KEY: secret
         
    tests:
       build:
        context: ./
        dockerfile: Dockerfile.tests
-       args:
-         - application=dynamodb-go-sample
       image: chadgrant/sample_api_test:${BUILD_NUMBER:-1.0.0}
       container_name: sample_api_test
       depends_on:
@@ -40,8 +38,10 @@ services:
         TEST_INTEGRATION: 1
 
    data:
+      build:
+       context: ./db
+      image: chadgrant/sample_api_data:${BUILD_NUMBER:-1.0.0}
       container_name: sample_api_data
-      image: amazon/dynamodb-local
       restart: unless-stopped
       ports:
          - 8000:8000
