--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -4,11 +4,24 @@ on: [push]
 
 jobs:
 
-  build:
-
+  test:
+    name: Test Go
     runs-on: ubuntu-latest
-
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.13
+      - name: Check out code
+      - name: Run Unit tests
+        run: make test
+  
+  test-docker:  
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Build the Docker images
-      run: make docker-build && make docker-test
+    - name: Build Docker images
+      run: make docker-build
+    - name: Test Docker Images
+      run: make docker-test
