--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,26 +2,9 @@ name: Docker Image CI
 
 on: [push]
 
-jobs:
-
-  test:
-    name: Test Go
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-          path: go/src/github.com/chadgrant/dynamodb-go-sample
-      - name: Set up Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.13
-      - name: Run Unit tests
-        run: make test
-        env:
-            GOPATH: /home/runner/work/chadgrant/go
-  
-  test-docker:  
+jobs:  
+  test-docker:
+    name: Build & Test Docker Images
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
