--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,8 +1,22 @@
 name: Docker Image CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:  
+  test-go:
+    name: Test Go
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.13
+      - name: Run Unit tests
+        run: make test
+        env:
+           GOPROXY: "https://proxy.golang.org"
+           
   test-docker:
     name: Build & Test Docker Images
     runs-on: ubuntu-latest
