--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,8 +12,16 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.13
+      - name: Set GOPATH
+        # temporary fix
+        # see https://github.com/actions/setup-go/issues/14
+        run: |
+          echo "##[set-env name=GOPATH;]$(dirname $GITHUB_WORKSPACE)"
+          echo "##[add-path]$(dirname $GITHUB_WORKSPACE)/bin"
+        shell: bash
       - name: Run Unit tests
         run: make test
+        shell: bash
         env:
            GOPROXY: "https://proxy.golang.org"
            
