--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.13
-      - name: Build
+      - name: Run Go Test
         run: |
           export GOPATH=$HOME/go
           export GOBIN=$(go env GOPATH)/bin
@@ -23,8 +23,7 @@ jobs:
           mkdir -p $GOPATH/src/github.com/$GITHUB_REPOSITORY
           mv $(pwd)/* $GOPATH/src/github.com/$GITHUB_REPOSITORY
           cd $GOPATH/src/github.com/$GITHUB_REPOSITORY
-      - name: Run Unit tests
-        run: make test
+          make test
         shell: bash
         env:
            GOPROXY: "https://proxy.golang.org"
