--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,7 +2,15 @@ name: Docker Image CI
 
 on: [push, pull_request]
 
-jobs:      
+jobs:
+  
+  test-go:
+   name: Run Go Test
+   steps:
+     - uses: cedrickring/golang-action@1.4.1
+       with:
+         args: make test
+
   test-docker:
     name: Build & Test Docker Images
     runs-on: ubuntu-latest
