--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,11 +1,11 @@
 name: Docker Image CI
 on: [push, pull_request]
 jobs:
-  test-go:
-   name: Run Go Test
-   runs-on: ubuntu-latest
-   steps:
-     - uses: cedrickring/golang-action@1.4.1
+  #test-go:
+   #name: Run Go Test
+   #runs-on: ubuntu-latest
+   #steps:
+     #- uses: cedrickring/golang-action@1.4.1
   test-docker:
     name: Build & Test Docker Images
     runs-on: ubuntu-latest
