--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,17 @@ services:
         DYNAMO_ENDPOINT: "http://data:8000"
         TEST_INTEGRATION: 1
 
+   ui:
+      build:
+        context: ./ui
+      image: chadgrant/sample_api_ui:${BUILD_NUMBER:-1.0.0}
+      container_name: sample_api_ui
+      restart: unless-stopped
+      ports:
+       - 3000:80
+      environment:
+        API_ENDPOINT: "http://localhost:5000"
+
    data:
       build:
        context: ./db
