--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -1,6 +1,7 @@
-ARG runtime_img="golang:1.13.5"
+ARG runtime_img="golang:1.13.5-alpine"
 
 FROM $runtime_img
+RUN apk add --update --no-cache make
 
 WORKDIR /go/src/github.com/chadgrant/dynamodb-go-sample
 
