--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -1,8 +1,7 @@
-ARG runtime_img="golang:1.13.5-alpine"
+ARG runtime_img
 
 FROM $runtime_img
 ENV CGO_ENABLED=0
-RUN apk add --update --no-cache make
 
 WORKDIR /go/src/github.com/chadgrant/dynamodb-go-sample
 
