--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -5,6 +5,7 @@ ENV CGO_ENABLED=0
 
 WORKDIR /go/src/github.com/chadgrant/dynamodb-go-sample
 
+COPY vendor ./vendor/
 COPY go.mod go.sum ./
 RUN go mod download
 
