--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -1,9 +1,25 @@
-ARG runtime_img
+ARG RUNTIME_IMG=chadgrant/golang-testing:1.13.5-buster
 
-FROM $runtime_img
-ENV CGO_ENABLED=0
+FROM $RUNTIME_IMG
+ARG SERVICE
+ARG SERVICE_FRIENDLY
+ARG SERVICE_DESCRIPTION
+ARG SERVICE_URL
+ARG BUILD_HASH
+ARG BUILD_BRANCH
+ARG BUILD_USER
+ARG BUILD_NUMBER
+ARG BUILD_GROUP
+ARG BUILD_REPO
+ARG VENDOR
+ARG BUILD_DATE
+ENV CGO_ENABLED=0 SERVICE="${SERVICE}" SERVICE_FRIENDLY="${SERVICE_FRIENDLY}" \
+    SERVICE_DESCRIPTION="${SERVICE_DESCRIPTION}" SERVICE_URL="${SERVICE_URL}" \
+    BUILD_HASH="${BUILD_HASH}" BUILD_BRANCH="${BUILD_BRANCH}" BUILD_USER="${BUILD_USER}" \
+    BUILD_NUMBER="${BUILD_NUMBER}" BUILD_GROUP="${BUILD_GROUP}" BUILD_REPO="${BUILD_REPO}" \
+    BUILD_DATE="${BUILD_DATE}" VENDOR="${VENDOR}"
 
-WORKDIR /go/src/github.com/chadgrant/dynamodb-go-sample
+WORKDIR /go/src/github.com/${VENDOR}/${SERVICE}
 
 COPY vendor ./vendor/
 COPY go.mod go.sum ./
@@ -13,3 +29,18 @@ COPY Makefile main.go ./
 COPY store ./store/
 
 CMD ["go","test","-v","./..."]
+
+## http://label-schema.org/rc1/
+LABEL org.label-schema.schema-version="1.0" \
+    org.label-schema.version="${BUILD_NUMBER}" \
+    org.label-schema.name="${SERVICE_FRIENDLY}" \
+    org.label-schema.description="${SERVICE_DESCRIPTION}" \
+    org.label-schema.application-name="${SERVICE}" \
+    org.label-schema.build-group="${BUILD_GROUP}" \
+    org.label-schema.build-user="${BUILD_USER}" \
+    org.label-schema.build-date="${BUILD_DATE}" \
+    org.label-schema.vcs-branch="${BUILD_BRANCH}" \
+    org.label-schema.vcs-ref="${BUILD_HASH}" \
+    org.label-schema.vcs-url="${BUILD_REPO}" \
+    org.label-schema.url="${SERVICE_URL}" \
+    org.label-schema.vendor="${VENDOR}"
