--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     ports:
       - 5000:8080
     healthcheck:
-      test: "curl -f http://localhost:8080/health/liveness || exit 1"
+      test: "curl -f http://localhost:8080/live || exit 1"
       interval: 30s
       timeout: 2s
       retries: 3
