adding js endpoint tests

--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -1,6 +1,12 @@
 ARG RUNTIME_IMG=chadgrant/golang-testing:1.13.5-buster
 
 FROM $RUNTIME_IMG
+ARG GROUP
+ARG VENDOR
+ARG SERVICE
+ARG SERVICE_FRIENDLY
+ARG SERVICE_DESCRIPTION
+ARG SERVICE_URL
 
 WORKDIR /go/src/github.com/${VENDOR}/${SERVICE}
 
@@ -10,23 +16,20 @@ RUN go mod download
 
 COPY Makefile main.go ./ 
 COPY store ./store/
+COPY tests ./tests/
+RUN cd tests && npm install
 
-ARG VENDOR
-ARG GROUP
-ARG SERVICE
-ARG SERVICE_FRIENDLY
-ARG SERVICE_DESCRIPTION
-ARG SERVICE_URL
 ARG BUILD_HASH
 ARG BUILD_BRANCH
 ARG BUILD_USER
 ARG BUILD_NUMBER
 ARG BUILD_REPO
 ARG BUILD_DATE
+
 ENV VENDOR="${VENDOR}" GROUP="${GROUP}" \
     SERVICE="${SERVICE}" SERVICE_FRIENDLY="${SERVICE_FRIENDLY}" SERVICE_DESCRIPTION="${SERVICE_DESCRIPTION}" SERVICE_URL="${SERVICE_URL}" \
     BUILD_HASH="${BUILD_HASH}" BUILD_BRANCH="${BUILD_BRANCH}" BUILD_USER="${BUILD_USER}" \
-    BUILD_NUMBER="${BUILD_NUMBER}" BUILD_REPO="${BUILD_REPO}" BUILD_DATE="${BUILD_DATE}" 
+    BUILD_NUMBER="${BUILD_NUMBER}" BUILD_REPO="${BUILD_REPO}" BUILD_DATE="${BUILD_DATE}"
 
 CMD ["make","test-int"]
 
