--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.4'
 
+volumes:
+  prometheus_data: {}
+  grafana_data: {}
+
 x-default-service: &svc
   build:
     args: &args
@@ -40,6 +44,8 @@ services:
       AWS_REGION: "us-east-1"
       AWS_ACCESS_KEY_ID: key
       AWS_SECRET_ACCESS_KEY: secret
+      PROMETHEUS_PUSH_ENABLED: "true"
+      PROMETHEUS_PUSH_HOST: "http://prometheus_gateway:9091"
       
   tests:
     <<: *svc
@@ -79,3 +85,36 @@ services:
     restart: unless-stopped
     ports:
       - 8000-8001:8000-8001
+
+  grafana:
+    image: grafana/grafana:6.6.2
+    container_name: sample_api_grafana
+    restart: unless-stopped
+    depends_on:
+      - prometheus
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./monitoring/grafana:/etc/grafana/provisioning
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: password
+
+  prometheus:
+    image: prom/prometheus:v2.16.0
+    container_name: sample_api_prometheus
+    restart: unless-stopped
+    ports:
+      - 9090:9090
+    depends_on:
+      - prometheus_gateway
+    volumes:
+      - prometheus_data:/prometheus
+      - ./monitoring/prometheus:/etc/prometheus
+
+  prometheus_gateway:
+    image: prom/pushgateway:v1.1.0
+    container_name: sample_api_prometheus_gateway
+    restart: unless-stopped
+    ports:
+      - 9091:9091
